Rename to Extra Hoppers and convert to Kotlin

--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
 	}
 	dependencies {
 		classpath "net.minecraftforge.gradle:ForgeGradle:2.2-SNAPSHOT"
+		classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlin_version}"
 	}
 }
 
@@ -16,6 +17,7 @@ plugins {
 }
 
 apply plugin: "net.minecraftforge.gradle.forge"
+apply plugin: "kotlin"
 
 version = mc_version + "-" + mod_version
 
@@ -28,7 +30,8 @@ minecraft {
 
 	mappings = mcp_mappings
 
-	replaceIn "Funnels.java"
+	replaceIn "ExtraHoppers.kt"
+	replaceIn "Reference.kt"
 	replace "@VERSION@", mod_version
 
 	useDepAts = true
@@ -59,6 +62,7 @@ repositories {
 
 dependencies {
 	deobfCompile group: "net.shadowfacts", name: "ShadowMC", version: mc_version + "-" + shadowmc_version
+	deobfCompile group: "net.shadowfacts", name: "Forgelin", version: forgelin_version
 	deobfCompile group: "mezz.jei", name: "jei_" + mc_version, version: jei_version
 }
 
