--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,14 @@
-mod_version = 1.2.1
+mod_version = 1.3.0
 group = net.shadowfacts
-archivesBaseName = Funnels
+archivesBaseName = ExtraHoppers
 
 mc_version = 1.11
-mcp_mappings = snapshot_20161120
-forge_version = 13.19.1.2188
+mcp_mappings = snapshot_20170113
+forge_version = 13.19.1.2199
 
-shadowmc_version = 3.7.0
-jei_version = 4.0.5.202
+kotlin_version = 1.0.6
+
+shadowmc_version = 3.7.4
+forgelin_version = 1.2.0
+jei_version = 4.1.1.208
+
