--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,13 @@
-mod_version = 1.3.0
+mod_version = 2.0.0
 group = net.shadowfacts
 archivesBaseName = ExtraHoppers
 
-mc_version = 1.11
-mcp_mappings = snapshot_20170113
-forge_version = 13.19.1.2199
+mc_version = 1.11.2
+mcp_mappings = snapshot_20170327
+forge_version = 13.20.0.2260
 
-kotlin_version = 1.0.6
+kotlin_version = 1.1.1
 
-shadowmc_version = 3.7.4
-forgelin_version = 1.2.0
-jei_version = 4.1.1.208
-
+shadowmc_version = 3.7.6-SNAPSHOT
+forgelin_version = 1.4.1
+jei_version = 4.2.10.250
