--- a/gradle.properties
+++ b/gradle.properties
@@ -2,12 +2,12 @@ mod_version = 2.0.0
 group = net.shadowfacts
 archivesBaseName = ExtraHoppers
 
-mc_version = 1.11.2
-mcp_mappings = snapshot_20170327
-forge_version = 13.20.0.2260
+mc_version = 1.12
+mcp_mappings = snapshot_20170615
+forge_version = 14.21.0.2333
 
-kotlin_version = 1.1.1
+kotlin_version = 1.1.2-4
 
-shadowmc_version = 3.7.6-SNAPSHOT
-forgelin_version = 1.4.1
-jei_version = 4.2.10.250
+shadowmc_version = 3.8.0-SNAPSHOT
+forgelin_version = 1.5.0
+jei_version = 4.6.0.61
