--- a/build.gradle
+++ b/build.gradle
@@ -54,7 +54,7 @@ repositories {
 	jcenter()
 	maven {
 		name "shadowfacts"
-		url "http://mvn.rx14.co.uk/shadowfacts/"
+		url "http://maven.shadowfacts.net/"
 	}
 	maven {
 		url "http://dvs1.progwml6.com/files/maven"
